metadata/MindReader/objects/DataDotComObject__c.object
<CustomObject>
    <description>Data.com details</description>
    <fields>
        <fullName>City__c</fullName>
        <description>City details</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>Company Name details</description>
        <label>CompanyName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>Contact Id details</description>
        <label>ContactId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country details</description>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departments__c</fullName>
        <description>Department details</description>
        <label>Departments</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description details</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <description>Email Id details</description>
        <label>Email Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First Name details</description>
        <label>FirstName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry details</description>
        <label>Industry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Last Name details</description>
        <label>LastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Level Details</description>
        <label>Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State Details</description>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title details</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Website details</description>
        <label>Website</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>DataDotComObject</label>
    <nameField>
        <label>Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataDotComObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>